--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -5,9 +5,14 @@
 .nav{
     display: flex;
     justify-content: space-around;
-    background-color: #000000d1;
+    background-color: #2b312a;
     color: white;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 5;
 }
 .nav-logo img{
     width: 115px;
@@ -109,6 +114,7 @@
     padding-right: 10px;
 }
 .nav-header{
+    margin-top: 64px;
     background-color: #333;
     display: flex;
     justify-content: space-between;
@@ -194,6 +200,8 @@
 #card-1 a{
     padding-top: 10px;
     font-size: 15px;
+    text-decoration: none;
+    color: blue;
 }
 #card-2{
     margin-left: 25px;
@@ -244,6 +252,8 @@
 #card-2 a{
     padding-top: 15px;
     font-size: 15px;
+    text-decoration: none;
+    color: blue;
 }
 #card-3{
     display: flex;
@@ -267,6 +277,8 @@
 #card-3 a{
     padding-top: 25px;
     font-size: 15px;
+    text-decoration: none;
+    color: blue;
 }
 #card-4{
     display: flex;
@@ -296,7 +308,7 @@
     cursor: pointer;
 }
 #card-4-2{
-    margin: 20px;
+    margin: 20px 0px 0px 25px;
     width: 300px;
     height: 250px;
     background-color: white;
@@ -373,6 +385,8 @@
 #card-5 a{
     padding-top: 10px;
     font-size: 15px;
+    text-decoration: none;
+    color: blue;
 }
 #card-6{
     margin-left: 20px;
@@ -446,6 +460,8 @@
 #card-6 a{
     padding-top: 20px;
     font-size: 15px;
+    text-decoration: none;
+    color: blue;
 }
 #card-7{
     margin-left: 20px;
@@ -503,4 +519,60 @@
 }
 #card-7-2-1 span{
     font-size: 13px;
+}
+#card-7-2-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-7-2-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-7-2-2 span{
+    font-size: 13px;
+}
+#card-7 a{
+    padding-top: 20px;
+    font-size: 15px;
+    text-decoration: none;
+    color: blue;
+}
+#card-8{
+    margin-left: 20px;
+    width: 270px;
+    height: 390px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+    display: flex;
+    flex-direction: column;
+}
+#card-8 span{
+    font-size: 20px;
+}
+#card-8 img{
+    padding-top: 10px;
+    width: 250px;
+    height: 300px;
+}
+#card-8 a{
+    padding-top: 10px;
+    font-size: 15px;
+    text-decoration: none;
+    color: blue;
+}
+#section-3{
+    background-color: #d1cfcf;
+    margin: 10px;
+    width: 1240px;
+    height: 300px;
+    padding: 20px 0px 0px 10px;
+}
+#section-3 span{
+    font-size: 20px;
+}
+#section-3 a{
+    text-decoration: none;
+    color: blue;
+    padding: 20px 0px 0px 15px;
 }
