--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -599,6 +599,7 @@ body{
 .offer-card-img img{
     width: 190px;
     height: 200px;
+    cursor: pointer;
 }
 .card-caption{
     display: flex;
@@ -619,4 +620,110 @@ body{
 }
 .fnt-15{
     font-size: 15px;
+}
+#section-4{
+    background-color: #ffffff;
+    margin: 20px 32px 10px 20px;
+    padding: 20px;
+}
+#section-4 a{
+    text-decoration: none;
+    color: blue;
+}
+#kitchen-offers{
+    margin-bottom: 20px;
+}
+#kitchen-img img{
+    width: 280px;
+    height: 200px;
+    cursor: pointer;
+}
+#section-5{
+    background-color: #ffffff;
+    margin: 20px 32px 10px 20px;
+    padding: 20px;
+}
+#section-5 a{
+    text-decoration: none;
+    color: blue;
+}
+#home-decor-offers{
+    margin-bottom: 20px;
+}
+#home-decor-img img{
+    width: 280px;
+    height: 200px;
+    cursor: pointer;
+}
+#section-6{
+    padding: 10px 0px 10px 20px;
+}
+#card-9{
+    width: 280px;
+    height: 345px;
+    background-color: white;
+    padding: 20px 0px 0px 10px;
+    display: flex;
+    flex-direction: column;
+}
+#card-9 span{
+    font-family: sans-serif;
+    font-size: 20px;
+}
+#card-9 a{
+    font-size: 15px;
+    text-decoration: none;
+    color: blue;
+}
+#card-9-1{
+    display: flex;
+    gap: 20px;
+}
+#card-9-1-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-9-1-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-9-1-1 span{
+    font-size: 13px;
+}
+#card-9-1-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-9-1-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-9-1-2 span{
+    font-size: 13px;
+}
+#card-9-2{
+    display: flex;
+    gap: 20px;
+}
+#card-9-2-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-9-2-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-9-2-1 span{
+    font-size: 13px;
+}
+#card-9-2-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 5px 0px;
+}
+#card-9-2-2 span{
+    font-size: 13px;
 }
