--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -772,10 +772,109 @@ h3{
 }
 #card-11-1{
     display: flex;
-    gap: 20px;
+    gap: 50px;
 }
 #card-11-1 img{
     margin-top: 20px;
-    width: 100px;
+    width: 80px;
+    height: 120px;
+    cursor: pointer;
+}
+#card-11-2{
+    display: flex;
+    gap: 50px;
+}
+#card-11-2 img{
+    margin-top: 20px;
+    width: 80px;
+    height: 120px;
+    cursor: pointer;
+}
+#card-12{
+    margin-left: 20px;
+    width: 280px;
+    height: 345px;
+    background-color: white;
+    padding: 20px 0px 0px 10px;
+    display: flex;
+    flex-direction: column;
+}
+#card-12 span{
+    font-size: 25px;
+    font-weight: bold;
+}
+#card-12-1{
+    display: flex;
+    gap: 20px;
+}
+#card-12-1-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-12-1-1 img{
+    width: 120px;
     height: 100px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-12-1-1 span{
+    font-size: 13px;
+}
+#card-12-1-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-12-1-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-12-1-2 span{
+    font-size: 13px;
+}
+#card-12-2{
+    display: flex;
+    gap: 20px;
+}
+#card-12-2-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-12-2-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-12-2-1 span{
+    font-size: 13px;
+}
+#card-12-2-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-12-2-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-12-2-2 span{
+    font-size: 13px;
+}
+#card-12 a{
+    margin-top: 20px;
+    text-decoration: none;
+    color: blue;
+    font-size: 15px;
+}
+#section-7{
+    background-color: #ffffff;
+    margin: 20px 32px 10px 20px;
+    padding: 20px;
+}
+#section-7 a{
+    text-decoration: none;
+    color: blue;
 }
