--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -921,3 +921,40 @@ h3{
     font-size: 20px;
     color: #a91010;
 }
+#section-10{
+    padding: 10px 0px 10px 20px;
+    display: flex;
+}
+#card-13{
+    width: 280px;
+    height: 345px;
+    background-color: white;
+    padding: 20px 0px 0px 10px;
+    display: flex;
+    flex-direction: column;
+}
+#card-13-1 span{
+    font-family: sans-serif;
+    font-size: 20px;
+}
+#card-13 a{
+    font-size: 15px;
+    text-decoration: none;
+    color: blue;
+}
+#card-13-1{
+    display: flex;
+    gap: 20px;
+}
+#card-13-1-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-13-1-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-13-1-1 span{
+    font-size: 13px;
+}
