--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -927,7 +927,7 @@ h3{
 }
 #card-13{
     width: 280px;
-    height: 345px;
+    height: 370px;
     background-color: white;
     padding: 20px 0px 0px 10px;
     display: flex;
@@ -941,6 +941,7 @@ h3{
     font-size: 15px;
     text-decoration: none;
     color: blue;
+    margin-top: 10px;
 }
 #card-13-1{
     display: flex;
@@ -957,4 +958,116 @@ h3{
 }
 #card-13-1-1 span{
     font-size: 13px;
+}
+#card-13-1-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-13-1-2 span{
+    font-size: 13px;
+}
+#card-13-2{
+    display: flex;
+    gap: 20px;
+}
+#card-13-2-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-13-2-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-13-2-1 span{
+    font-size: 13px;
+}
+#card-13-2-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 5px 0px;
+}
+#card-13-2-2 span{
+    font-size: 13px;
+}
+#card-14{
+    margin-left: 20px;
+    width: 270px;
+    height: 370px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+    display: flex;
+    flex-direction: column;
+}
+#card-14-1 span{
+    font-family: sans-serif;
+    font-size: 20px;
+}
+#card-14 a{
+    font-size: 15px;
+    text-decoration: none;
+    color: blue;
+    margin-top: 20px;
+}
+#card-14-1{
+    display: flex;
+    gap: 20px;
+}
+#card-14-1-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-14-1-1 img{
+    width: 120px;
+    height: 120px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-14-1-2 img{
+    width: 120px;
+    height: 120px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-14-2{
+    display: flex;
+    gap: 20px;
+}
+#card-14-2-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-14-2-1 img{
+    width: 120px;
+    height: 120px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-14-2-2 img{
+    width: 120px;
+    height: 120px;
+    padding: 10px 0px 5px 0px;
+    cursor: pointer;
+}
+#card-15{
+    margin-left: 20px;
+    width: 270px;
+    height: 370px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+}
+#card-15 img{
+    margin-top: 20px;
+    width: 240px;
+    height: 240px;
+}
+#card-15 a{
+    margin-top: 30px;
+    text-decoration: none;
+    font-size: 16px;
+    color: blue;
 }
