--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -1071,3 +1071,79 @@ h3{
     font-size: 16px;
     color: blue;
 }
+#card-16{
+    margin-left: 20px;
+    width: 270px;
+    height: 370px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+}
+#card-16 span{
+    font-family: sans-serif;
+    font-size: 20px;
+}
+#card-16 a{
+    margin-top: 20px;
+    font-size: 15px;
+    text-decoration: none;
+    color: blue;
+}
+#card-16-1{
+    display: flex;
+    gap: 20px;
+}
+#card-16-1-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-16-1-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-16-1-1 span{
+    font-size: 13px;
+}
+#card-16-1-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-16-1-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-16-1-2 span{
+    font-size: 13px;
+}
+#card-16-2{
+    display: flex;
+    gap: 20px;
+}
+#card-16-2-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-16-2-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+    cursor: pointer;
+}
+#card-16-2-1 span{
+    font-size: 13px;
+}
+#card-16-2-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 0px 0px;
+    cursor: pointer;
+}
+#card-16-2-2 span{
+    font-size: 13px;
+}
