--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -47,7 +47,7 @@ body{
     flex-direction: row;
 }
 .btn{
-    width: 43px;
+    width: 50px;
     height: 36px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -64,8 +64,8 @@ body{
 }
 .search-icon a{
     position: relative;
-    right: 34px;
-    padding: 9px;
+    right: 28px;
+    padding: 7px;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
     background-color: #f5b236;
@@ -117,7 +117,7 @@ body{
     padding-right: 10px;
 }
 .nav-header{
-    margin-top: 64px;
+    margin-top: 55px;
     background-color: #333;
     display: flex;
     justify-content: space-between;
@@ -278,7 +278,7 @@ body{
     height: 270px;
 }
 #card-3 a{
-    padding-top: 25px;
+    padding-top: 10px;
     font-size: 15px;
     text-decoration: none;
     color: blue;
@@ -290,39 +290,37 @@ body{
 #card-4-1{
     margin: 0px 10px 0px 25px;
     width: 280px;
-    height: 130px;
+    height: 140px;
     background-color: white;
     padding: 20px 0px 0px 20px;
 }
 #card-4-1 span{
-    font-size:25px;
+    font-size:20px;
 }
 #card-4-1{
     text-align: center;
 }
 .btn-2{
-    margin: 10px;
     padding: 10px 50px 10px 50px;
     border: 1px solid transparent;
     border-radius: 5px;
     background-color: #FFD814;
     color: black;
-    font-size: 20px;
+    font-size: 15px;
     cursor: pointer;
 }
-#card-4-2{
+#card-4-2 img{
     margin: 20px 0px 0px 25px;
-    width: 300px;
+    width: 280px;
     height: 250px;
-    background-color: white;
 }
 #section-2{
     padding: 20px 0px 10px 20px;
     display: flex;
 }
 #card-5{
-    width: 270px;
-    height: 390px;
+    width: 300px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 10px;
     display: flex;
@@ -385,15 +383,14 @@ body{
     font-size: 13px;
 }
 #card-5 a{
-    padding-top: 10px;
     font-size: 15px;
     text-decoration: none;
     color: blue;
 }
 #card-6{
     margin-left: 20px;
-    width: 270px;
-    height: 390px;
+    width: 300px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 20px;
     display: flex;
@@ -460,15 +457,15 @@ body{
     font-size: 13px;
 }
 #card-6 a{
-    padding-top: 20px;
+    padding-top: 30px;
     font-size: 15px;
     text-decoration: none;
     color: blue;
 }
 #card-7{
     margin-left: 20px;
-    width: 270px;
-    height: 390px;
+    width: 300px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 20px;
     display: flex;
@@ -535,15 +532,15 @@ body{
     font-size: 13px;
 }
 #card-7 a{
-    padding-top: 20px;
+    padding-top: 10px;
     font-size: 15px;
     text-decoration: none;
     color: blue;
 }
 #card-8{
     margin-left: 20px;
-    width: 270px;
-    height: 390px;
+    width: 280px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 20px;
     display: flex;
@@ -661,7 +658,7 @@ body{
 }
 #card-9{
     width: 280px;
-    height: 345px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 10px;
     display: flex;
@@ -731,7 +728,7 @@ body{
 #card-10{
     margin-left: 20px;
     width: 270px;
-    height: 345px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 20px;
     display: flex;
@@ -747,10 +744,7 @@ h3{
     text-align: center;
 }
 #card-10 span{
-    font-size: 15px;
-}
-#price{
-    font-size: 17px;
+    font-size: 12px;
 }
 #card-10 a{
     margin-top: 20px;
@@ -761,14 +755,20 @@ h3{
 #card-11{
     margin-left: 20px;
     width: 270px;
-    height: 345px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 20px;
     display: flex;
     flex-direction: column;
 }
 #card-11 span{
-    font-size: 25px;
+    font-size: 15px;
+}
+#card-11 a{
+    margin-top: 20px;
+    text-decoration: none;
+    font-size: 15px;
+    color: blue;
 }
 #card-11-1{
     display: flex;
@@ -793,7 +793,7 @@ h3{
 #card-12{
     margin-left: 20px;
     width: 280px;
-    height: 345px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 10px;
     display: flex;
@@ -926,8 +926,8 @@ h3{
     display: flex;
 }
 #card-13{
-    width: 280px;
-    height: 370px;
+    width: 300px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 10px;
     display: flex;
@@ -993,8 +993,8 @@ h3{
 }
 #card-14{
     margin-left: 20px;
-    width: 270px;
-    height: 370px;
+    width: 300px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 20px;
     display: flex;
@@ -1052,8 +1052,8 @@ h3{
 }
 #card-15{
     margin-left: 20px;
-    width: 270px;
-    height: 370px;
+    width: 300px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 20px;
     font-size: 20px;
@@ -1073,8 +1073,8 @@ h3{
 }
 #card-16{
     margin-left: 20px;
-    width: 270px;
-    height: 370px;
+    width: 300px;
+    height: 400px;
     background-color: white;
     padding: 20px 0px 0px 20px;
     font-size: 20px;
